[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.37", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
maxminddb = "0.24"
lazy_static = "1.4"
moka = { version = "0.12", features = ["sync"] }
chrono = "0.4"
reqwest = { version = "0.12", features = ["rustls-tls-native-roots"] }
bincode = "1.3"
arc-swap = "1.7"
ip_network_table = "0.2"
ip_network = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }
tower-http = { version = "0.5", features = ["cors"] }
dashmap = "5.5"
once_cell = "1.19"

[[bin]]
name = "api"
path = "src/main.rs"

[[bin]]
name = "compiler"
path = "src/bin/compiler.rs"
